_cache/v0.18.1/font-util/specs.md
---
title: "font-util"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["1.3.2"], "compilers": ["gcc@=7.5.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["data-vis-sdk", "root"], "num_specs": 1, "num_specs_by_stack": {"data-vis-sdk": 1, "root": 1}}
spec_details: [{"hash": "yowtilssarvsiaqksdg432mmaroohe2z", "compiler": "gcc@=7.5.0", "versions": ["1.3.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["fonts=encodings,font-adobe-100dpi,font-adobe-75dpi,font-adobe-utopia-100dpi,font-adobe-utopia-75dpi,font-adobe-utopia-type1,font-alias,font-arabic-misc,font-bh-100dpi,font-bh-75dpi,font-bh-lucidatypewriter-100dpi,font-bh-lucidatypewriter-75dpi,font-bh-type1,font-bitstream-100dpi,font-bitstream-75dpi,font-bitstream-speedo,font-bitstream-type1,font-cronyx-cyrillic,font-cursor-misc,font-daewoo-misc,font-dec-misc,font-ibm-type1,font-isas-misc,font-jis-misc,font-micro-misc,font-misc-cyrillic,font-misc-ethiopic,font-misc-meltho,font-misc-misc,font-mutt-misc,font-schumacher-misc,font-screen-cyrillic,font-sun-misc,font-winitzki-cyrillic,font-xfree86-type1"], "stacks": ["data-vis-sdk", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/font-util-1.3.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-font-util-1.3.2-yowtilssarvsiaqksdg432mmaroohe2z.spack"}]
---