_cache/v0.23.0/font-util/specs.md
---
title: "font-util"
layout: cache
categories: [package, v0.23.0]
meta: {"versions": ["1.4.1"], "compilers": ["gcc@=10.2.1", "gcc@=11.1.0", "gcc@=11.4.0", "oneapi@=2024.2.1"], "oss": ["centos7", "ubuntu20.04", "ubuntu22.04"], "platforms": ["linux"], "targets": ["x86_64_v3"], "stacks": ["data-vis-sdk", "developer-tools-manylinux2014", "e4s", "e4s-oneapi", "root"], "num_specs": 4, "num_specs_by_stack": {"root": 4, "developer-tools-manylinux2014": 1, "data-vis-sdk": 1, "e4s": 1, "e4s-oneapi": 1}}
spec_details: [{"hash": "tied5xuebn3akggydle6um7it7zkjoee", "compiler": "gcc@=10.2.1", "versions": ["1.4.1"], "os": "centos7", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=autotools", "fonts=encodings,font-adobe-100dpi,font-adobe-75dpi,font-adobe-utopia-100dpi,font-adobe-utopia-75dpi,font-adobe-utopia-type1,font-alias,font-arabic-misc,font-bh-100dpi,font-bh-75dpi,font-bh-lucidatypewriter-100dpi,font-bh-lucidatypewriter-75dpi,font-bh-type1,font-bitstream-100dpi,font-bitstream-75dpi,font-bitstream-speedo,font-bitstream-type1,font-cronyx-cyrillic,font-cursor-misc,font-daewoo-misc,font-dec-misc,font-ibm-type1,font-isas-misc,font-jis-misc,font-micro-misc,font-misc-cyrillic,font-misc-ethiopic,font-misc-meltho,font-misc-misc,font-mutt-misc,font-schumacher-misc,font-screen-cyrillic,font-sun-misc,font-winitzki-cyrillic,font-xfree86-type1"], "stacks": ["root", "developer-tools-manylinux2014"], "size": "-", "tarball": "https://binaries.spack.io/v0.23.0/build_cache/linux-centos7-x86_64_v3/gcc-10.2.1/font-util-1.4.1/linux-centos7-x86_64_v3-gcc-10.2.1-font-util-1.4.1-tied5xuebn3akggydle6um7it7zkjoee.spack"}, {"hash": "w76dpo6l25qsjvomw6t5c7t5non7owqu", "compiler": "gcc@=11.1.0", "versions": ["1.4.1"], "os": "ubuntu20.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=autotools", "fonts=encodings,font-adobe-100dpi,font-adobe-75dpi,font-adobe-utopia-100dpi,font-adobe-utopia-75dpi,font-adobe-utopia-type1,font-alias,font-arabic-misc,font-bh-100dpi,font-bh-75dpi,font-bh-lucidatypewriter-100dpi,font-bh-lucidatypewriter-75dpi,font-bh-type1,font-bitstream-100dpi,font-bitstream-75dpi,font-bitstream-speedo,font-bitstream-type1,font-cronyx-cyrillic,font-cursor-misc,font-daewoo-misc,font-dec-misc,font-ibm-type1,font-isas-misc,font-jis-misc,font-micro-misc,font-misc-cyrillic,font-misc-ethiopic,font-misc-meltho,font-misc-misc,font-mutt-misc,font-schumacher-misc,font-screen-cyrillic,font-sun-misc,font-winitzki-cyrillic,font-xfree86-type1"], "stacks": ["root", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/v0.23.0/build_cache/linux-ubuntu20.04-x86_64_v3/gcc-11.1.0/font-util-1.4.1/linux-ubuntu20.04-x86_64_v3-gcc-11.1.0-font-util-1.4.1-w76dpo6l25qsjvomw6t5c7t5non7owqu.spack"}, {"hash": "khhn2qqt6swigumuocy64jaszirutll7", "compiler": "gcc@=11.4.0", "versions": ["1.4.1"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=autotools", "fonts=encodings,font-adobe-100dpi,font-adobe-75dpi,font-adobe-utopia-100dpi,font-adobe-utopia-75dpi,font-adobe-utopia-type1,font-alias,font-arabic-misc,font-bh-100dpi,font-bh-75dpi,font-bh-lucidatypewriter-100dpi,font-bh-lucidatypewriter-75dpi,font-bh-type1,font-bitstream-100dpi,font-bitstream-75dpi,font-bitstream-speedo,font-bitstream-type1,font-cronyx-cyrillic,font-cursor-misc,font-daewoo-misc,font-dec-misc,font-ibm-type1,font-isas-misc,font-jis-misc,font-micro-misc,font-misc-cyrillic,font-misc-ethiopic,font-misc-meltho,font-misc-misc,font-mutt-misc,font-schumacher-misc,font-screen-cyrillic,font-sun-misc,font-winitzki-cyrillic,font-xfree86-type1"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/v0.23.0/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.4.0/font-util-1.4.1/linux-ubuntu22.04-x86_64_v3-gcc-11.4.0-font-util-1.4.1-khhn2qqt6swigumuocy64jaszirutll7.spack"}, {"hash": "3nqo24hi3otsils7spmrg35znf7nd7kg", "compiler": "oneapi@=2024.2.1", "versions": ["1.4.1"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=autotools", "fonts=encodings,font-adobe-100dpi,font-adobe-75dpi,font-adobe-utopia-100dpi,font-adobe-utopia-75dpi,font-adobe-utopia-type1,font-alias,font-arabic-misc,font-bh-100dpi,font-bh-75dpi,font-bh-lucidatypewriter-100dpi,font-bh-lucidatypewriter-75dpi,font-bh-type1,font-bitstream-100dpi,font-bitstream-75dpi,font-bitstream-speedo,font-bitstream-type1,font-cronyx-cyrillic,font-cursor-misc,font-daewoo-misc,font-dec-misc,font-ibm-type1,font-isas-misc,font-jis-misc,font-micro-misc,font-misc-cyrillic,font-misc-ethiopic,font-misc-meltho,font-misc-misc,font-mutt-misc,font-schumacher-misc,font-screen-cyrillic,font-sun-misc,font-winitzki-cyrillic,font-xfree86-type1"], "stacks": ["root", "e4s-oneapi"], "size": "-", "tarball": "https://binaries.spack.io/v0.23.0/build_cache/linux-ubuntu22.04-x86_64_v3/oneapi-2024.2.1/font-util-1.4.1/linux-ubuntu22.04-x86_64_v3-oneapi-2024.2.1-font-util-1.4.1-3nqo24hi3otsils7spmrg35znf7nd7kg.spack"}]
---